--- a/src/sass/components/redemption.scss
+++ b/src/sass/components/redemption.scss
@@ -198,4 +198,19 @@
       margin: 0 auto;
     }
   }
+  .text-error {
+    color: $red;
+    padding: 0 12px;
+    font-family: $g-black;
+    font-size: 1.1rem;
+    width: 255px;
+    line-height: 1;
+    text-align: center;
+    margin: 0 auto;
+    @media(min-width: 768px) {
+      font-size: 1.3rem;
+      letter-spacing: -0.5px;
+      width: 390px;
+    }
+  }
 }
