git add changes for redemption

--- a/src/sass/components/zone.scss
+++ b/src/sass/components/zone.scss
@@ -4,7 +4,7 @@
  * These styles are for the redeem page.
  *
  * Index
- * - Zone 
+ * - Zone
  *   |- Background image
  *   |- Box zone
  *     |- Title
@@ -141,6 +141,22 @@
     //Button
     .link {
       margin: 20px auto 0px;
+    }
+  }
+  .text-error {
+    color: $red;
+    padding: 0 12px;
+    font-family: $g-black;
+    font-size: 1.1rem;
+    width: 255px;
+    line-height: 1;
+    text-align: center;
+    margin: 0 auto;
+
+    @media(min-width: 768px) {
+      font-size: 1.3rem;
+      letter-spacing: -0.5px;
+      width: 390px;
     }
   }
 }
