Style min-height prinicipal banner and correction menu header

--- a/src/sass/base/_global.scss
+++ b/src/sass/base/_global.scss
@@ -125,6 +125,11 @@ html {
   }
 }
 
+#___gatsby {
+  @media(min-width: 1024px) {
+    height: auto !important;
+  }
+}
 
 // input[type='date']{
 //   color:transparent;
