--- a/src/sass/components/buy.scss
+++ b/src/sass/components/buy.scss
@@ -297,8 +297,8 @@
                 background-repeat: no-repeat;
                 z-index: 999999;
                 cursor: pointer;
-                transform: translate(-50%, -50%);
-                left: 15%;
+                transform: translate(0, -50%);
+                left: 0;
                 top: 42%;
                 @media(min-width: 556px) {
                   
@@ -319,9 +319,9 @@
                 background-image: url(../../images/avance-rapido-down.png);
                 z-index: 999999;
                 cursor: pointer;
-                transform: translate(-50%, -50%);
+                transform: translate(0, -50%);
                 top: 42%;
-                right: -13%;
+                right: 0;
                 @media(min-width: 556px) {}
                 @media(min-width: 556px) {}
                 @media(min-width: 556px) {}
