--- a/src/sass/components/buy.scss
+++ b/src/sass/components/buy.scss
@@ -248,6 +248,7 @@
           display: block !important;
           flex: 0 0 22.33%;
           position: relative;
+          transition: all .5s;
           // min-width: 100px;
           @media(min-width: 556px) {
 
@@ -260,6 +261,9 @@
           }
           @media(min-width: 1450px) {
             
+          }
+          &:hover {
+            transform: scale(1.1);
           }
           input {
             font-size: 6rem;
