--- a/src/sass/components/recover-password.scss
+++ b/src/sass/components/recover-password.scss
@@ -5,6 +5,7 @@
  *
  * Index
  * - Recover password 
+ *   |-Text success
  *   |-Button
 */
 // variable import
@@ -19,6 +20,22 @@
       }
       @media(min-width: 2000px) {
         font-size: 6rem;
+      }
+    }
+     //Text success
+     .text-success {
+      color: green;
+      padding: 0 12px;
+      font-family: $g-black;
+      font-size: 1.1rem;
+      width: 255px;
+      line-height: 1;
+      text-align: center;
+      margin: 5px auto;
+      @media(min-width: 768px) {
+        font-size: 1.3rem;
+        letter-spacing: -0.5px;
+        width: 390px;
       }
     }
     //Button
