--- a/src/sass/components/login.scss
+++ b/src/sass/components/login.scss
@@ -13,6 +13,7 @@
  *     |- Error field
  *     |- Flag password
  *     |- Button
+ *     |- Text success
  *     |- Link
 */
 // variable import
@@ -165,6 +166,26 @@
         }
         @media(min-width: 1024px) {
           margin: 44px auto 18px;
+        }
+      }
+      //Text success
+      .text-success {
+        color: green;
+        padding: 0 12px;
+        font-family: $g-black;
+        font-size: 1.1rem;
+        width: 255px;
+        line-height: 1;
+        text-align: center;
+        margin: 5px auto;
+        @media(min-width: 768px) {
+          font-size: 1.3rem;
+          letter-spacing: -0.5px;
+          width: 390px;
+        }
+        a {
+          font-family: $g-black;
+          color: $orange_primary;
         }
       }
       //Link
