--- a/src/sass/components/secundary-slider.scss
+++ b/src/sass/components/secundary-slider.scss
@@ -407,19 +407,46 @@
 
 
 
-.secundary-slider .slick-slider div.slick-list .slick-track .slick-slide .container-slick .image {
+.secundary-slider .slick-slider div.slick-list .slick-track .slick-slide .container-slick .slider-one, .secundary-slider .slick-slider div.slick-list .slick-track .slick-slide .container-slick .slider-two, .secundary-slider .slick-slider div.slick-list .slick-track .slick-slide .container-slick .slider-three, .secundary-slider .slick-slider div.slick-list .slick-track .slick-slide .container-slick .slider-four {
   position: relative;
+  width: 100%;
+  height: 100%;
+}
+.image-one.gatsby-image-wrapper, .image-two.gatsby-image-wrapper, .image-three.gatsby-image-wrapper, .image-four.gatsby-image-wrapper {
+  position: absolute !important;
 }
 
-.img-one.gatsby-image-wrapper {
+
+// Slider one
+.slider-two .image-one.gatsby-image-wrapper {
+  position: absolute !important;
+  top: 0%;
+  left: 9%;
+  width: 32%;
+  height: 45% !important;
+}
+.slider-two .image-two.gatsby-image-wrapper {
+  position: absolute !important;
+  width: 25%;
+  height: 57% !important;
+  top: 34%;
+  left: 0%;
+  z-index: -1;
+}
+
+
+
+
+
+// SLider two
+.slider-four .image-one.gatsby-image-wrapper {
   position: absolute !important;
   top: 0;
   left: 0;
   width: 36%;
-  height: 100%;
+  height: 100% !important;
 }
-
-.img-two.gatsby-image-wrapper {
+.slider-four .image-two.gatsby-image-wrapper {
   position: absolute !important;
   width: 30%;
   height: 28% !important;
@@ -427,7 +454,7 @@
   left: 39%;
 }
 
-.img-three.gatsby-image-wrapper {
+.slider-four .image-three.gatsby-image-wrapper {
   position: absolute !important;
   width: 38%;
   height: 35% !important;
@@ -435,10 +462,31 @@
   left: 44%;
 }
 
-.img-four.gatsby-image-wrapper {
+.slider-four .image-four.gatsby-image-wrapper {
   position: absolute !important;
   width: 38%;
   height: 39% !important;
   top: 21%;
   left: 61%;
+}
+
+
+
+
+
+// SLider three
+.slider-three .image-one.gatsby-image-wrapper {
+  position: absolute !important;
+  top: 3%;
+  left: 56%;
+  width: 36%;
+  height: 38% !important;
+  z-index: 1;
+}
+.slider-three .image-two.gatsby-image-wrapper {
+  position: absolute !important;
+  width: 50%;
+  height: 100% !important;
+  top: 0%;
+  left: 9%;
 }
