--- a/src/sass/components/secundary-slider.scss
+++ b/src/sass/components/secundary-slider.scss
@@ -411,6 +411,10 @@
   position: relative;
   width: 100%;
   height: 100%;
+  @media(max-width: 1023px) {
+    height: 75vh;
+    min-height: 37rem;
+  }
 }
 .image-one.gatsby-image-wrapper, .image-two.gatsby-image-wrapper, .image-three.gatsby-image-wrapper, .image-four.gatsby-image-wrapper {
   position: absolute !important;
@@ -482,6 +486,9 @@
   width: 36%;
   height: 38% !important;
   z-index: 1;
+  @media(max-width: 1023px) {
+    display: none;
+  }
 }
 .slider-three .image-two.gatsby-image-wrapper {
   position: absolute !important;
@@ -489,4 +496,10 @@
   height: 100% !important;
   top: 0%;
   left: 9%;
+  @media(max-width: 1023px) {
+    width: 100%;
+    height: 100% !important;
+    top: 0%;
+    left: 0%;
+  }
 }
