--- a/src/sass/components/secundary-slider.scss
+++ b/src/sass/components/secundary-slider.scss
@@ -428,6 +428,9 @@
   left: 9%;
   width: 32%;
   height: 45% !important;
+  @media(max-width: 1023px) {
+    display: none;
+  }
 }
 .slider-two .image-two.gatsby-image-wrapper {
   position: absolute !important;
@@ -436,6 +439,12 @@
   top: 34%;
   left: 0%;
   z-index: -1;
+  @media(max-width: 1023px) {
+    width: 100%;
+    height: 100% !important;
+    top: 0%;
+    left: 0%;
+  }
 }
 
 
@@ -449,6 +458,12 @@
   left: 0;
   width: 36%;
   height: 100% !important;
+  @media(max-width: 1023px) {
+    width: 100%;
+    height: 100% !important;
+    top: 0%;
+    left: 0%;
+  }
 }
 .slider-four .image-two.gatsby-image-wrapper {
   position: absolute !important;
@@ -456,6 +471,9 @@
   height: 28% !important;
   top: 75%;
   left: 39%;
+  @media(max-width: 1023px) {
+    display: none;
+  }
 }
 
 .slider-four .image-three.gatsby-image-wrapper {
@@ -464,6 +482,9 @@
   height: 35% !important;
   top: 0%;
   left: 44%;
+  @media(max-width: 1023px) {
+    display: none;
+  }
 }
 
 .slider-four .image-four.gatsby-image-wrapper {
@@ -472,6 +493,9 @@
   height: 39% !important;
   top: 21%;
   left: 61%;
+  @media(max-width: 1023px) {
+    display: none;
+  }
 }
 
 
