--- a/src/sass/components/secundary-slider.scss
+++ b/src/sass/components/secundary-slider.scss
@@ -527,3 +527,23 @@
     left: 0%;
   }
 }
+
+// SLider four
+.slider-one .image-one.gatsby-image-wrapper {
+  position: absolute !important;
+  width: 40%;
+  height: 100% !important;
+  top: -6%;
+  right: 11%;
+  img  {
+    @media(min-width: 1024px) {
+      object-fit: contain !important; 
+    }
+  }
+  @media(max-width: 1023px) {
+    width: 100%;
+    height: 100% !important;
+    top: 0%;
+    left: 0%;
+  }
+}
