--- a/src/sass/components/secundary-slider.scss
+++ b/src/sass/components/secundary-slider.scss
@@ -144,7 +144,7 @@
           .bodySlider {
             position: absolute;
             z-index: 10;
-            width: 23rem;
+            width: 28rem;
             overflow: visible;
             transform: translate(0%, -50%);
             top: 35%;
@@ -291,7 +291,30 @@
         }
       }
     }
-
+    ul.slick-list[active="active0"] {
+      top: 10%;
+    }
+    ul.slick-list[active="active1"] {
+      top: 25%;
+    }
+    ul.slick-list[active="active2"] {
+      top: 40%;
+    }
+    ul.slick-list[active="active3"] {
+      top: 55%;
+    }
+    ul.slick-list[active="active4"] {
+      top: 10%;
+    }
+    ul.slick-list[active="active5"] {
+      top: 25%;
+    }
+    ul.slick-list[active="active6"] {
+      top: 40%;
+    }
+    ul.slick-list[active="active7"] {
+      top: 55%;
+    }
     ul.slick-list {
       @media(max-width: 1024px) {
         display: none !important;
@@ -300,7 +323,7 @@
       @media(min-width: 1024px) {
         display: flex;
         position: absolute;
-        top: 25%;
+        top: 10%;
         transform: translate(-50%, -50%);
         right: 0;
         padding-right: .7rem;
@@ -311,7 +334,6 @@
         justify-content: center;
         align-items: center;
         overflow: visible;
-
         li.slick-active {
           background: #FB5030;
           transition: .4s all;
@@ -405,7 +427,13 @@
 }
 
 
-
+.secundary-slider {
+  img {
+    @media(min-width: 1024px) {
+      object-fit: contain;
+    }
+  } 
+}
 
 .secundary-slider .slick-slider div.slick-list .slick-track .slick-slide .container-slick .slider-one, .secundary-slider .slick-slider div.slick-list .slick-track .slick-slide .container-slick .slider-two, .secundary-slider .slick-slider div.slick-list .slick-track .slick-slide .container-slick .slider-three, .secundary-slider .slick-slider div.slick-list .slick-track .slick-slide .container-slick .slider-four {
   position: relative;
@@ -435,8 +463,8 @@
 .slider-two .image-two.gatsby-image-wrapper {
   position: absolute !important;
   width: 40%;
-  height: 57% !important;
-  top: 43%;
+  height: 76% !important;
+  top: 24%;
   left: 0%;
   z-index: -1;
   @media(max-width: 1023px) {
@@ -454,10 +482,11 @@
 // SLider two
 .slider-four .image-one.gatsby-image-wrapper {
   position: absolute !important;
-  top: 0;
+  top: 50%;
   left: 0;
-  width: 26%;
-  height: 91% !important;
+  width: 27%;
+  height: 88% !important;
+  transform: translateY(-50%);
   @media(max-width: 1023px) {
     width: 100%;
     height: 100% !important;
@@ -469,7 +498,7 @@
   position: absolute !important;
   width: 25%;
   height: 28% !important;
-  top: 65%;
+  top: 68%;
   left: 29%;
   @media(max-width: 1023px) {
     display: none;
@@ -533,8 +562,9 @@
   position: absolute !important;
   width: 40%;
   height: 100% !important;
-  top: -6%;
+  top: 34%;
   right: 11%;
+  transform: translateY(-50%);
   img  {
     @media(min-width: 1024px) {
       object-fit: contain !important; 
