--- a/src/sass/components/secundary-slider.scss
+++ b/src/sass/components/secundary-slider.scss
@@ -291,28 +291,28 @@
         }
       }
     }
-    ul.slick-list[active="active0"] {
+    ul.slick-list[active="active0"]:nth-child(1n + 2) {
       top: 10%;
     }
-    ul.slick-list[active="active1"] {
+    ul.slick-list[active="active1"]:nth-child(1n + 2) {
       top: 25%;
     }
-    ul.slick-list[active="active2"] {
+    ul.slick-list[active="active2"]:nth-child(1n + 2) {
       top: 40%;
     }
-    ul.slick-list[active="active3"] {
+    ul.slick-list[active="active3"]:nth-child(1n + 2) {
       top: 55%;
     }
-    ul.slick-list[active="active4"] {
+    ul.slick-list[active="active4"]:nth-child(1n + 2) {
       top: 10%;
     }
-    ul.slick-list[active="active5"] {
+    ul.slick-list[active="active5"]:nth-child(1n + 2) {
       top: 25%;
     }
-    ul.slick-list[active="active6"] {
+    ul.slick-list[active="active6"]:nth-child(1n + 2) {
       top: 40%;
     }
-    ul.slick-list[active="active7"] {
+    ul.slick-list[active="active7"]:nth-child(1n + 2) {
       top: 55%;
     }
     ul.slick-list {
@@ -480,6 +480,21 @@
 
 
 // SLider two
+.slider-four {
+  @media(min-width: 1024px) {
+    &::before {
+      content: "";
+      position: absolute;
+      width: 70%;
+      height: 62%;
+      background: #F0F0F0;
+      top: 50%;
+      right: 0;
+      transform: translateY(-50%);
+    }
+  }
+}
+
 .slider-four .image-one.gatsby-image-wrapper {
   position: absolute !important;
   top: 50%;
@@ -562,12 +577,20 @@
   position: absolute !important;
   width: 40%;
   height: 100% !important;
-  top: 34%;
+  top: 40%;
   right: 11%;
   transform: translateY(-50%);
   img  {
     @media(min-width: 1024px) {
       object-fit: contain !important; 
+      // &::before {
+      //   content: "";
+      //   position: absolute;
+      //   width: 100%;
+      //   height: 100%;
+      //   background: black;
+      //   top: 0;
+      // }
     }
   }
   @media(max-width: 1023px) {
@@ -575,5 +598,32 @@
     height: 100% !important;
     top: 0%;
     left: 0%;
+  }
+}
+
+
+.slider-one .image-one {
+  @media(min-width: 1024px) {
+    overflow: visible !important;
+    &::before {
+      content: "";
+      position: absolute;
+      width: 85%;
+      height: 90%;
+      background: #F0F0F0;
+      top: 0%;
+      left: 6%;
+    }
+    &::after {
+      content: "";
+      position: absolute;
+      width: 90%;
+      height: 60%;
+      background: #F0F0F0;
+      top: 50%;
+      left: 30%;
+      transform: translateY(-50%);
+      z-index: -10;
+    }
   }
 }
