--- a/src/sass/components/privacy.scss
+++ b/src/sass/components/privacy.scss
@@ -33,3 +33,54 @@
     }
   }
 }
+
+.container-terms {
+  overflow: hidden;
+  position: relative;
+  h1, h2, h3, h4, h5, h6, p, ul {
+    color: white;
+  }
+  .bg-terms {
+    z-index: -10;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: top right;
+  }
+  .text-terms {
+    padding: 11rem 0rem 3rem;
+    display: flex;
+    flex-direction: column;
+    font-size: 1.4rem;
+    font-family: "Gatorade black";
+    width: 70vw;
+    margin: auto;
+  }
+  .terms {
+    width: 70vw;
+    margin: auto;
+    h2 {
+      -webkit-text-stroke: unset;
+      font-family: 'Gatorade black';
+      font-size: 1.4rem;
+      padding-bottom: 0.8rem;
+    }
+    p {
+      font-family: 'Montserrat medium';
+      line-height: 1.2;
+      font-size: 1rem;
+    }
+  }
+  ul {
+    padding-left: 5vw;
+    margin: 0;
+    li {
+      padding-left: 2rem;
+      &::marker {
+        color: #fb5030;
+        font-size: 2.5rem;
+      }
+    }
+  }
+}
