--- a/src/sass/components/secundary-slider.scss
+++ b/src/sass/components/secundary-slider.scss
@@ -272,6 +272,7 @@
                 font-family: 'HelveticaNeue';
                 line-height: 1.2;
                 font-size: 1.2rem;
+                color: #222222;
                 @media(min-width: 1450px) {
                   font-size: 1.6rem;
                 }
@@ -501,7 +502,9 @@
   left: 0;
   width: 27%;
   height: 88% !important;
-  transform: translateY(-50%);
+  @media(min-width: 1024px) {
+    transform: translateY(-50%);
+  }
   @media(max-width: 1023px) {
     width: 100%;
     height: 100% !important;
@@ -575,11 +578,13 @@
 // SLider four
 .slider-one .image-one.gatsby-image-wrapper {
   position: absolute !important;
-  width: 40%;
+  width: 32%;
   height: 100% !important;
-  top: 40%;
+  top: 39%;
   right: 11%;
-  transform: translateY(-50%);
+  @media(min-width: 1024px) {
+    transform: translateY(-50%);
+  }
   img  {
     @media(min-width: 1024px) {
       object-fit: contain !important; 
@@ -609,21 +614,41 @@
       content: "";
       position: absolute;
       width: 85%;
-      height: 90%;
+      height: 65%;
       background: #F0F0F0;
-      top: 0%;
-      left: 6%;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
     }
     &::after {
       content: "";
       position: absolute;
       width: 90%;
-      height: 60%;
+      height: 45%;
       background: #F0F0F0;
       top: 50%;
-      left: 30%;
-      transform: translateY(-50%);
+      left: 78%;
+      -webkit-transform: translateY(-50%);
+      transform: translate(-50%, -50%);
       z-index: -10;
+    }
+  }
+}
+
+
+.position-left {
+  .slider-one {
+    &::before {
+      content: "";
+      position: absolute;
+      width: 13vh;
+      height: 31vw;
+      background: #F0F0F0;
+      z-index: -10;
+      top: 44%;
+      left: 1.8rem;
+      z-index: -10;
+      transform: translate(-50%, -50%);
     }
   }
 }
