Style privacy mobile

--- a/src/sass/components/privacy.scss
+++ b/src/sass/components/privacy.scss
@@ -56,10 +56,17 @@
     font-family: "Gatorade black";
     width: 70vw;
     margin: auto;
+    @media(max-width: 1023px){
+      padding: 8rem 0rem 3rem;
+      width: 90vw;
+    }
   }
   .terms {
     width: 70vw;
     margin: auto;
+    @media(max-width: 1023px) {
+      width: 90vw;
+    }
     h2 {
       -webkit-text-stroke: unset;
       font-family: 'Gatorade black';
@@ -73,10 +80,17 @@
     }
   }
   ul {
-    padding-left: 5vw;
+    padding-left: 2rem;
     margin: 0;
+    font-family: 'Montserrat medium';
+    @media(min-width: 1024px) {
+      padding-left: 5vw;
+    }
     li {
-      padding-left: 2rem;
+      padding-left: 0;
+      @media(min-width: 1024px) {
+        padding-left: 2rem;
+      }
       &::marker {
         color: #fb5030;
         font-size: 2.5rem;
