--- a/src/sass/components/privacy.scss
+++ b/src/sass/components/privacy.scss
@@ -42,7 +42,7 @@
   }
   .bg-terms {
     z-index: -10;
-    position: absolute;
+    position: absolute !important;
     width: 100%;
     height: 100%;
     object-fit: cover;
