--- a/src/sass/components/privacy.scss
+++ b/src/sass/components/privacy.scss
@@ -47,6 +47,14 @@
     height: 100%;
     object-fit: cover;
     object-position: top right;
+    img {
+      z-index: -10;
+      position: absolute !important;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      object-position: top right !important;
+    }
   }
   .text-terms {
     padding: 11rem 0rem 3rem;
