Style modification widt text pricipal slider and font privacy

--- a/src/sass/components/privacy.scss
+++ b/src/sass/components/privacy.scss
@@ -82,7 +82,7 @@
       padding-bottom: 0.8rem;
     }
     p {
-      font-family: 'Montserrat medium';
+      font-family: 'Gatorade light';
       line-height: 1.2;
       font-size: 1rem;
     }
@@ -90,7 +90,7 @@
   ul {
     padding-left: 2rem;
     margin: 0;
-    font-family: 'Montserrat medium';
+    font-family: 'Gatorade light';
     @media(min-width: 1024px) {
       padding-left: 5vw;
     }
